remove duplicate of chrome://net-export in chrome://about

Signed-off-by: Pierre Neter <pierreneter@gmail.com>
Bug: 751391
Change-Id: I6b2d4d1102f2424cff411147637bae6c31c1acd0
Reviewed-on: https://chromium-review.googlesource.com/596988
Commit-Queue: Eric Roman <eroman@chromium.org>
Reviewed-by: Eric Roman <eroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491810}
Former-commit-id: 9d17a904c60cfd5b28ce48fab86dc23678bfa871